<resources>
    <string name="app_name">LayoutTest</string>
    <string name="one1">One,One</string>
    <string name="one2">One,Two</string>
    <string name="one3">One,Three</string>
    <string name="one4">One,Four</string>
    <string name="two1">Two,One</string>
    <string name="two2">Two,Two</string>
    <string name="two3">Two,Three</string>
    <string name="two4">Two,Four</string>
    <string name="three1">Three,One</string>
    <string name="three2">Three,Two</string>
    <string name="three3">Three,Three</string>
    <string name="three4">Three,Four</string>
    <string name="four1">Four,One</string>
    <string name="four2">Four,Two</string>
    <string name="four3">Four,Three</string>
    <string name="four4">Four,Four</string>
    <string name="title1">Hello TableLayout</string>
    <string name="title2">ConstraintLayoutTest</string>
    <string name="table1">Open&#8230;</string>
    <string name="table11">Ctrl-O</string>
    <string name="table2">Save&#8230;</string>
    <string name="table21">Ctrl-S</string>
    <string name="table3">Save As&#8230;</string>
    <string name="table31">Ctrl-Shift-S</string>
    <string name="table4">X Import&#8230;</string>
    <string name="table5">X Export&#8230;</string>
    <string name="table51">Ctrl-E</string>
    <string name="table6">Quit</string>
    <string name="input">Input</string>
    <string name="content1">0.0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="button_dot">.</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">×</string>
    <string name="button_divide">÷</string>
    <string name="button_equal">=</string>
    <string name="default1">default</string>
    <string name="content2">Space Stations</string>
    <string name="content3">Flights</string>
    <string name="content4">Rovers</string>
    <string name="content5">DCA</string>
    <string name="content6">MARS</string>
    <string name="content7">DEPART</string>
    <string name="content8">1 Traveller</string>
    <string name="content9">One Way</string>
</resources>