<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginTop="3dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="@string/one1"
            android:background="@drawable/child_border1"
            android:gravity="center">
        </TextView>

        <TextView
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="@string/one2"
            android:background="@drawable/child_border1"
            android:gravity="center"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="@string/one3"
            android:background="@drawable/child_border1"
            android:gravity="center"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="@string/one4"
            android:background="@drawable/child_border1"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginTop="2dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="@string/two1"
            android:background="@drawable/child_border1"
            android:gravity="center"/>

        <TextView
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="@string/two2"
            android:background="@drawable/child_border1"
            android:gravity="center"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="@string/two3"
            android:background="@drawable/child_border1"
            android:gravity="center"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="@string/two4"
            android:background="@drawable/child_border1"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginTop="2dp">

        <TextView
            android:layout_width="68dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="@string/three1"
            android:background="@drawable/child_border1"
            android:gravity="center"/>

        <TextView
            android:layout_width="77dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="@string/three2"
            android:background="@drawable/child_border1"
            android:gravity="center"/>

        <TextView
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="@string/three3"
            android:background="@drawable/child_border1"
            android:gravity="center"/>

        <TextView
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="@string/three4"
            android:background="@drawable/child_border1"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginTop="2dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="@string/four1"
            android:background="@drawable/child_border1"
            android:gravity="center"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="@string/four2"
            android:background="@drawable/child_border1"
            android:gravity="center"/>

        <TextView
            android:layout_width="73dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="@string/four3"
            android:background="@drawable/child_border1"
            android:gravity="center"/>

        <TextView
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="@string/four4"
            android:background="@drawable/child_border1"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>