<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:stretchColumns="0"
    android:background="@color/black"
    android:id="@+id/tableLayout">
    <!--    stretchColumns使第一列延申到行的全部，因为TableLayout会自动管理宽度-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="@string/title1"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_vertical|start"
        android:background="#9E9E9E"/>

    <TableRow
        android:background="@color/black">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="@string/table1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center_vertical|start" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/table11"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center_vertical|end"/>
    </TableRow>

    <TableRow
        android:background="@color/black">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="@string/table2"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center_vertical|start" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/table21"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center_vertical|end"/>
    </TableRow>

    <TableRow
        android:background="@color/black">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="@string/table3"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center_vertical|start" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/table31"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center_vertical|end"/>
    </TableRow>

    <TableRow
        android:background="#9E9E9E">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="5dp"/>
    </TableRow>

    <TableRow
        android:background="@color/black">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingStart="3dp"
            android:paddingEnd="0dp"
            android:text="@string/table4"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center_vertical|start" />
    </TableRow>

    <TableRow
        android:background="@color/black">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingStart="3dp"
            android:paddingEnd="0dp"
            android:text="@string/table5"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center_vertical|start" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/table51"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center_vertical|end"/>
    </TableRow>

    <TableRow
        android:background="#9E9E9E">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
    </TableRow>

    <TableRow
        android:background="@color/black">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="@string/table6"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center_vertical|start" />
    </TableRow>
</TableLayout>