<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/constrainLayout2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con1"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="10dp"
        android:background="@drawable/shadow_left"
        app:layout_constraintEnd_toStartOf="@id/con2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_weight="1">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/default1"
            android:scaleType="fitCenter"
            android:src="@drawable/space_station_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con2"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="10dp"
        android:background="@drawable/shadow_center"
        app:layout_constraintEnd_toStartOf="@id/con3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/con1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_weight="1">

        <ImageView
            android:id="@+id/img2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/default1"
            android:scaleType="fitCenter"
            android:src="@drawable/rocket_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con3"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="10dp"
        android:background="@drawable/shadow_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/con2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_weight="1">

        <ImageView
            android:id="@+id/img3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/default1"
            android:scaleType="fitCenter"
            android:src="@drawable/rover_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con4"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/con2">
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con5"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/con4">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginStart="75dp"
            android:background="#2B663A"
            android:gravity="center"
            android:text="@string/content5"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="75dp"
            android:background="#2B663A"
            android:gravity="center"
            android:text="@string/content6"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/img5"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/default1"
            android:scaleType="fitCenter"
            android:src="@drawable/double_arrows"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:background="#2B663A"
        android:gravity="center"
        android:text="@string/content7"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/img6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/default1"
        android:scaleType="fitCenter"
        android:src="@drawable/galaxy"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/con5" />

    <ImageView
        android:id="@+id/img7"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/default1"
        android:scaleType="fitCenter"
        android:src="@drawable/rocket_icon"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/img6"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/con5"
        app:layout_constraintVertical_bias="0.504" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="#BB6421"
        android:gravity="center"
        android:text="@string/content8"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mySwitch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/mySwitch"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#BB6421"
        android:text="@string/content9"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/con5"
        app:trackTint="#AA5A1E"
        app:thumbTint="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>